# agenda_base

./: .env  .env.example  pyproject.toml  requirements.txt
agenda/: forms.py  models.py  views.py
agenda/migrations/: 0001_initial.py  0002_agendamento_servico.py  0003_remove_servico_field.py
agenda/static/: base.css  theme.js
agenda/static/agenda/css/: agenda.css
agenda/static/agenda/js/: agenda.js
agenda/templates/: agenda.html  agenda_mobile.html  finalizar_mobile.html
agenda/templatetags/: agenda_extras.py
core/: asgi.py  middleware.py  mongo_apps.py  settings.py  urls.py  wsgi.py
financeiro/: apps.py  models.py
financeiro/migrations/: 0001_initial.py
