[project]
name = "agenda"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "django==6.0.1",
    "django-mongodb-backend==6.0.1",
    "gunicorn==25.1.0",
    "pymongo==4.16.0",
    "python-dotenv==1.2.1",
    "whitenoise==6.11.0",
]
